# retro-snake-game

./: .dockerignore  .env.example  .gitignore  README.md  agents.md  docker-compose.yml  render.yaml  tailwind.config.ts
.github/workflows/: ci.yml
backend/: .gitignore  Dockerfile  Dockerfile.test  README.md  openapi.yaml  pyproject.toml
backend/src/snake_game/: __init__.py  auth.py  config.py  database.py  main.py  models.py  schemas.py
backend/src/snake_game/routers/: __init__.py  auth.py  scores.py  users.py
backend/tests/: conftest.py  test_auth.py  test_scores.py  test_users.py
frontend/: .gitignore  Dockerfile  Dockerfile.test  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vite.config.ts
frontend/e2e/: api-contract.spec.ts  auth.spec.ts  error-handling.spec.ts  full-flow.spec.ts  game.spec.ts  helpers.ts  leaderboard.spec.ts  score-submission.spec.ts
frontend/playwright-report/: index.html
frontend/src/: App.test.tsx  App.tsx  index.css
frontend/src/components/: AuthDialog.test.tsx  AuthDialog.tsx  Leaderboard.tsx  ProfileSettings.test.tsx  SnakeGame.LoginPrompt.test.tsx  SnakeGame.test.tsx  SnakeGame.tsx  game-board.tsx  profile-settings.tsx  theme-provider.tsx  user-avatar.tsx
frontend/src/contexts/: AuthContext.test.tsx  AuthContext.tsx
frontend/src/lib/: api.integration.test.ts  api.test.ts  api.ts
frontend/src/pages/: Index.tsx  NotFound.test.tsx
frontend/src/test/: setup.ts  utils.tsx
src/: index.css
src/components/: SnakeGame.tsx
